List subordinate locations